# alba-dsl

./: .gitignore  .hlint.yaml  LICENSE  Makefile  alba.cabal  cabal.project  readme.md
apps/alba/: main.hs
apps/contracts/lastWill/: Contract.hs  ContractApi.hs  Opts.hs  Params.hs  Spend.hs  Test.hs  main.hs
apps/contracts/simpleP2pkh/: Opts.hs  main.hs
apps/contracts/transferWithTimeout/: Contract.hs  ContractApi.hs  Opts.hs  Params.hs  Spend.hs  Test.hs  main.hs
apps/demo/: Demo.hs  DemoPrelude.hs  main.hs
apps/ecmul/: main.hs
bchn-secp256k1/: bchn-secp256k1.cabal  libsecp256k1-config.h
bchn-secp256k1/cbits/: interface.c
bchn-secp256k1/secp256k1/: COPYING
bchn-secp256k1/src/: Secp256k1.hs
benchmark/: BenchmarkOpcodeDispatch.hs  benchmark.hs  benchmark2.hs
pubkeys/: albadsl.asc
src/Alba/Dsl/V1/: Bch2025.hs  Bch2026.hs  Common.hs
src/Alba/Dsl/V1/Bch2025/: CashScriptOptimizerRules.hs  Compile.hs  CompilerUtils.hs  Infix.hs  Lang.hs  LangArgs.hs  LangDispatch.hs  Ops.hs  Stack.hs  TxDsl.hs  Version.hs
src/Alba/Dsl/V1/Bch2025/Contract/: Math.hs  Prelude.hs
src/Alba/Dsl/V1/Bch2026/: Lang.hs  Ops.hs  Stack.hs
src/Alba/Dsl/V1/Bch2026/Contract/: Math.hs  Prelude.hs
src/Alba/Dsl/V1/Common/: CashScriptOptimizerRules.hs  Compile.hs  CompilerUtils.hs  Contract.hs  ContractCashScriptArtifact.hs  ContractDoc.hs  FlippedCons.hs  FunctionState.hs  Lang.hs  LangArgs.hs  LangDispatch.hs  Listing.hs  Stack.hs  TermClass.hs  ThUtils.hs  TypeFamilies.hs  Version.hs
src/Alba/Misc/: Cmd.hs  Debug.hs  Haskoin.hs  KeyPair.hs  MockVals.hs  Opts.hs  Utils.hs  Wallet.hs
src/Alba/Node/: ValidateTokens.hs  Validation.hs  ValidationFailure.hs
src/Alba/Tx/: Bch2025.hs
src/Alba/Tx/Bch2025/: Constants.hs  Hash.hs  SerializationUtils.hs  Tx.hs  TxId.hs  TxIn.hs  TxOut.hs  TxOuts.hs
src/Alba/Vm/: Bch2025.hs  Bch2026.hs  Common.hs
src/Alba/Vm/Bch2025/: OpClasses.hs  SigCheckUtils.hs  SigEncoding.hs  TxContext.hs  Utils.hs  Vm.hs  VmOpArithmetic.hs  VmOpBitwiseLogic.hs  VmOpBytes.hs  VmOpConstants.hs  VmOpDiscouragedNops.hs  VmOpEqualityAndConditionals.hs  VmOpHash.hs  VmOpIntrospection.hs  VmOpLocktime.hs  VmOpMultiSig.hs  VmOpSig.hs  VmOpStack.hs  VmOpTokenIntrospection.hs  VmOps.hs  VmParams.hs  VmSigHash.hs
src/Alba/Vm/Bch2026/: Vm.hs  VmOpDefineInvoke.hs  VmOpEval.hs  VmOpLoops.hs  VmOps.hs  VmParams.hs
src/Alba/Vm/Common/: BasicTypes.hs  Crypto.hs  Logging.hs  OpClasses.hs  OpcodeL1.hs  OpcodeL2.hs  ScriptError.hs  StackElement.hs  Tx.hs  TxContext.hs  Utils.hs  Vm.hs  VmBool.hs  VmInteger.hs  VmLimits.hs  VmParams.hs  VmStack.hs  VmState.hs
src/DslDemo/: Exponentiation.hs  MergeSort.hs  readme.md
src/DslDemo/EllipticCurve/: Affine.hs  AffineAdd.hs  Constants.hs  EllipticCurve.hs  EllipticCurveConstants.hs  EllipticCurveField.hs  EllipticCurvePacked.hs  EllipticCurvePackedCommon.hs  EllipticCurvePackedNonRecursive.hs  EllipticCurvePoint.hs  EllipticCurveUnpacked.hs  EllipticCurveUnpackedCommon.hs  EllipticCurveUnpackedNonRecursive.hs  Field.hs  Jacobian.hs  JacobianAdd.hs  JacobianPoint.hs  Packed.hs  PackedCommon.hs  Point.hs  Unpacked.hs  UnpackedCommon.hs
src/DslDemo/EllipticCurve/Native/: Affine.hs  Constants.hs  FieldElement.hs  Jacobian.hs
src/DslDemo/MergeSort/: MergeSort.hs  MergeSortEval.hs
test/: Exponentiation.hs  LibauthSupport.hs  MergeSort.hs  QuickCheckSupport.hs  TestArguments.hs  TestCheckMultiSig.hs  TestCheckSig.hs  TestCustomTypes.hs  TestDataPushing.hs  TestDataSig.hs  TestEval.hs  TestFunctions.hs  TestIntPushing.hs  TestInteger.hs  TestIntrospection.hs  TestInvalidStack.hs  TestLambdas.hs  TestLibauthVectors.hs  TestLibauthVectors2025.hs  TestLibauthVectors2026.hs  TestLibauthVectorsExclusions.hs  TestLibauthVectorsExclusions2025.hs  TestLibauthVectorsExclusions2026.hs  TestLoops.hs  TestOpcodes.hs  TestOpsArithmetic.hs  TestOpsBytes.hs  TestOpsConditional.hs  TestOpsHash.hs  TestOpsOrdering.hs  TestOpsStack.hs  TestOptimizer.hs  TestStackBranches.hs  TestUtils.hs  test.hs
test/RecursionExamples/: EllipticCurve.hs  EllipticCurveConstants.hs  EllipticCurveField.hs  EllipticCurvePacked.hs  EllipticCurvePoint.hs  EllipticCurveUnpacked.hs  Exponentiation.hs  MergeSort.hs
test/libauth/: LICENSE
